Fixing drop menu spacing

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
   height: 100vh;
   width: 100vw;
 
-  grid-template-columns: 0.5fr 2fr 0.5fr;
+  grid-template-columns: 0.1fr 2fr 0.1fr;
   grid-template-rows: 3.5em 13em 22em 13em 2.7em 18em 3.5em;
   gap: 1em 0px;
   grid-template-areas:
@@ -113,7 +113,7 @@ body {
     display: grid;
     height: 100vh;
     width: 100vw;
-    grid-template-columns: 0.15fr 2fr 0.15fr;
+    grid-template-columns: 0.1fr 2fr 0.1fr;
     grid-template-rows: 3.5em 20em 70em 40em 18em 3.5em;
     gap: 1em 0px;
     grid-template-areas:
@@ -123,7 +123,6 @@ body {
       ". about-us ."
       ". testimonials ."
       "footer footer footer";
-      overflow: scroll;
   }
 
   /* HEADER & NAV CODE */
@@ -163,7 +162,7 @@ body {
     background: lightblue;
     transition: top 1s ease;
     display: none;
-    margin-top: 0;
+    margin-top: 0;    
     padding-left: 0;
   }
 
@@ -321,6 +320,7 @@ body {
   align-content: center;
   justify-content: center;
   flex-direction: column;
+  padding: 0 5vw;
 }
 
 .about-us p {
